.gsd/exec/bf91bd52-ffda-4a3f-b298-7909aba03eb9.stdout
EXIT=101
For more information about this error, try `rustc --explain E0062`.
error: could not compile `bevyrogue` (test "follow_up_chains") due to 4 previous errors
error: could not compile `bevyrogue` (test "tempo_resistance") due to 2 previous errors
error: could not compile `bevyrogue` (test "patamon_blueprint_seam") due to 3 previous errors
error: could not compile `bevyrogue` (test "presentation_metadata_boundary") due to 6 previous errors
error[E0063]: missing fields `acted_last_turn`, `acted_this_turn` and `hits_received_this_round` in initializer of `RoundFlags`
   --> tests/resource_caps.rs:661:13
    |
661 |             RoundFlags {
    |             ^^^^^^^^^^ missing `acted_last_turn`, `acted_this_turn` and `hits_received_this_round`

error: could not compile `bevyrogue` (test "roster_smoke") due to 4 previous errors
warning: unused variable: `target`
   --> tests/resource_caps.rs:484:9
    |
484 |     let target = app
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_target`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `target`
   --> tests/resource_caps.rs:593:9
    |
593 |     let target = app
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_target`

warning: `bevyrogue` (test "resource_caps") generated 2 warnings
error: could not compile `bevyrogue` (test "resource_caps") due to 1 previous error; 2 warnings emitted
warning: `bevyrogue` (test "turn_system_av") generated 1 warning (run `cargo fix --test "turn_system_av" -p bevyrogue` to apply 1 suggestion)
warning: `bevyrogue` (test "status_effect_integration") generated 1 warning (run `cargo fix --test "status_effect_integration" -p bevyrogue` to apply 1 suggestion)
